# Code-Vault

./: .gitignore  CMakeLists.txt  README.md  clang-format.md
.leetcode/: 0.review.cpp  (+166 more)
Cplusplus/: .clang-format  CMakeLists.txt  CMakePresets.json  generate_cmake_presets.py
Cplusplus/cmake/: CompilerConfig.cmake  CopyDLLs.cmake  Dependencies.cmake
Cplusplus/doc/: MSVC.md  编译器.md
Cplusplus/doc/Benchmark/: vector、deque、list容器头插法性能测试.md  标准库性能测试.md
Cplusplus/doc/GCC/: pb_ds.md
Cplusplus/doc/MSVC/: 并发运行时和并行库.md
Cplusplus/doc/Parallel/: intel指令集.md  openmp.md
Cplusplus/doc/Standard/: C++标准头文件概览.md  cdefine.md  关键字和语言支持.md  内存管理库.md  容器库.md  并发支持库.md  数值库.md  文本处理库.md  算法库.md  类型支持库.md  范围库.md  诊断库.md  输入输出库.md  迭代器.md  通用工具库.md
Cplusplus/doc/Tittle-Tattle/: AI Coding.md  IO多路复用模型.md  Rust VS C++ - 泛型.md  技术.md
Cplusplus/doc/_Course/: CoursesLearn-README.md  CoursesLearn-有用代码文件.md
Cplusplus/doc/_Course/CUDA/: CUDA编程基础入门：从零开始掌握GPU并行计算.md
Cplusplus/doc/_Course/CoursesLearn/: README.md
Cplusplus/doc/_Course/CoursesLearn-Code/: Courses.sln
Cplusplus/doc/_Course/CoursesLearn-Code/Courses/: Courses.vcxproj.filters  test_log.txt
Cplusplus/doc/_Course/CoursesLearn-课件/: 第01、02、03讲： CMake 内容要点.md  第05讲：字符与字符串（编码历史进程）.md  第11讲：TBB 开启的并行编程之旅 内容要点.md  第13讲：从计算机组成原理看 C 语言指针（内存存储，new、delete）.md  第14讲：【深入浅出访存优化】内容要点.md  第15讲：【从稀疏数据结构到量化数据类型】多维数组如何实现按需分配内存，自动扩容？浮点数如何作为定点数压缩，高效利用内存带宽？.md  第16讲：【并行计算】CUDA开启GPU编程.md
Cplusplus/doc/_Course/CoursesLearn/Courses/: Courses.vcxproj
Cplusplus/doc/_Course/OpenGL/: OpenGL.sln  README.md  坐标属性及glEnableVertexAttribArray.md
Cplusplus/doc/_Course/OpenGL/OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  imgui.ini  readme.md
Cplusplus/doc/_Course/OpenGL/notes/: 1,欢迎来到OpenGL.md  10.在OpenGL中处理错误.md  11.OpenGL中的統一变量.md  12.OpenGL中的顶点数组及总结VAOVBOIBO.md  13.抽象顶点索引缓冲区成类.md  14.在OpenGL中的缓冲区的布局和抽象.md  15.在OpenGL中抽象着色器.md  16.在OpenGL写一个基础渲染器类.md  17.在OpenGL中的纹理.md  18.在OpenGL中的混合.md  19.在OpenGL中的数学.md  2.设置OpenGL和在C++中创建一个窗口.md  20.在OpenGL中的投影矩阵.md  21.在OpenGL中的模型视图投影矩阵.md  22.在OpenGL中的ImGui.md  23.批量渲染对象.md  24.为OpenGL建立一个测试框架.md  25.创建测试 - 副本 (6).md  26.创建一个纹理测试.md  27.如何让你们的统一变量变快.md  28.批渲染-简介.md  3.在c++中使用现代OpenGL.md  4.顶点缓冲区和在现代OpenGL中画一个三角形.md  5.在OpenGL中顶点属性和布局.md  6.在OpenGL中着色器的原理.md  7.在OpenGL中写一个着色器.md  8.在OpenGL中我是如何处理着色器的.md  9.在OpenGL中的索引缓冲区.md  未抽象代码.md
Cplusplus/doc/_Notes/: 多态.md  实战入门CMake.md  模板元编程.md
Cplusplus/doc/_Notes/Demo/: Logger.h
Cplusplus/src/: CMakeLists.txt  header.h  main.cpp  test
Cplusplus/src/algorithm/: a_star.hpp  dag_scheduler.hpp  dijkstra.hpp
Cplusplus/src/compiler/msvc/: msvc.h
Cplusplus/src/cuda/: CMakeLists.txt  kernel.cu
Cplusplus/src/intel/: mm128x3.h
Cplusplus/src/leetcode/: 0048_rotate_image.cpp  0048_rotate_image.h  0064_x_sqrt.cpp  0064_x_sqrt.h  0264_ugly_num_ii.cpp  0264_ugly_num_ii.h  0912_sort_array.cpp  0912_sort_array.h  CMakeLists.txt  FileRandomSelector.cpp  FileRandomSelector.h  LeetcodeContentParser.cpp  LeetcodeContentParser.h
Cplusplus/src/math/: isomath.hpp
Cplusplus/src/memory/: aligned_allocator.hpp  fast_allocator.hpp  pmr_allocator.hpp
Cplusplus/src/module/: CMakeLists.txt  export.ixx  hello.cpp  module_partitions.containers-associative.ixx  module_partitions.containers-sequence.ixx  module_partitions.containers.ixx  module_separation-impl.cpp  module_separation.ixx  module_submodules.views-span.ixx  module_submodules.views-string_view.ixx  module_submodules.views.ixx
Cplusplus/src/music/: CMakeLists.txt  music.cpp
Cplusplus/src/parallel/: CMakeLists.txt  avx_filter.cpp  avx_filter.hpp  filter_sin_greater_than_0.h  mm128x3.h  no_initialized_pod.h
Cplusplus/src/radix_sort/: CMakeLists.txt  bechmark_radixsort_par.cpp  bechmark_radixsort_par2.cpp  bechmark_radixsort_par3.cpp  bechmark_radixsort_seq.cpp  benchmark_new_deprecated.cpp  benchmark_parallel_sort.cpp  deprecated_radix_sort.hpp  radix_sort.md  simple_radix_execution_test.cpp
Cplusplus/src/random/: wangshash.h  xorshift32.h
Cplusplus/src/reflect/: reflect.hpp
Cplusplus/src/sort/: bechmark_radixsort.hpp  bechmark_radixsort_par.hpp  bechmark_radixsort_par2.hpp  bechmark_radixsort_par3.hpp  bechmark_radixsort_seq.hpp  benchmark_parallel_sort.hpp  benchmark_sort.hpp  radix_sort.hpp  radix_sort.md  radix_sort_impl_ver.hpp
Cplusplus/src/stdex/: scope.h  utility.h
Cplusplus/src/tools/: generator.hpp  loop_unroller.hpp  signal.hpp  ticktock.h
Cplusplus/src/utils/: dag_scheduler.h  morton2d.h  print.hpp  scope_profiler.h
Cplusplus/stdex/algorithm/: a_star.hpp  dag_scheduler.hpp  dijkstra.hpp  radix_sort.hpp
Cplusplus/stdex/callback/: signal.hpp
Cplusplus/stdex/io/: cppdemangle.hpp  debug.hpp  print.hpp
Cplusplus/stdex/math/: isomath.hpp  morton2d.hpp
Cplusplus/stdex/memory/: aligned_allocator.hpp  fast_allocator.hpp  no_initialized_pod.hpp  pmr_allocator.hpp  selective_init_res.hpp
Cplusplus/stdex/profiling/: generator.hpp  scope_profiler.hpp  ticktock.hpp
Cplusplus/stdex/raii/: scope.hpp
Cplusplus/stdex/random/: wangshash.hpp  xorshift32.hpp
Cplusplus/stdex/reflect/: reflect.hpp
Cplusplus/stdex/search/: functional_search_ex.hpp
Cplusplus/stdex/simd/: cpuid.hpp  simd_detect.hpp
Cplusplus/stdex/utility/: loop_unroller.hpp  utility.hpp
src/: CMakeLists.txt  main.cpp
src/BaseLearn/Class/: Introduce.md
src/BaseLearn/Concurrent/: Concurrent.md
src/BaseLearn/STL/: Vector.hpp
src/BaseLearn/Web/Sync/: synchronizelearn..h
src/Demo/: Blob.hpp  Logger.md
src/Demo/Utils/: AutoDump.hpp  Introduce.md  RingBuffer.hpp
src/class/: lambda_bind.cxx  operator.cxx  operator.md  strvec.cxx  virtual_oop.cxx  virtual_oop.md
src/designed/: singleton.hpp  singleton.md  singleton_test.cxx
src/template/: ringbuffer.hpp  ringbuffer.md  template.md  template_autodump.hpp  template_blob.hpp  template_test.cxx  template_type_traits.cxx
src/web/: 网络编程.md
src/web/async/: AsyncServer.h  LogicSystem.h  MessagePackage.h  ThreadPool.h  asynchronizelearn.h
src/web/sync/: SyncClient.cxx  SyncServer.cxx  message.hpp
src/work/: CRTP奇异递归模板设计任务管理系统.md  logger.cxx  logger.h  logger.md
(+134 files in other folders)
